refactor: remove unused imports and adjust code